# Bar

./: README.MD  bai  bai.vala  meson.build  readme.md  uncrustify.cfg
src/: bai.vala  bg.vala  topbar.vala
src/background/: main.vala  values.vala
src/background/modules/: show_lyrics.vala  values.vala  weather.vala
src/topbar/: Bar.css  Bar.vala  battery.vala  get_battery.vala  get_battery_status.vala  izle.py  main.vala  meson.build  shortcuts.vala  show_time.vala  to_workspace.vala  values.vala  what_app_icon.vala  what_app_is_open.vala  workspaces.vala
src/topbar/modules/: app-icon.vala  battery.vala  charge.vala  controls.vala  get_battery.vala  get_battery_status.vala  music.vala  playing_music.vala  shortcuts.vala  show_time.vala  time.vala  to_workspace.vala  values.vala  volume.vala  what_app_icon.vala  what_app_is_open.vala  window.vala  workspace.vala  workspaces.vala
src/topbar/things/: Things.vala  Values.vala
tests/: better_volume_icon.vala  get_niri_window  get_niri_window.vala  gtklayer  gtklayer.vala  improve_battery.vala  improve_battery_status  improve_battery_status.vala  improve_volume  improve_volume.vala  show_music.vala  slide_on_volume.vala  test_arrays.vala  weather.vala
